file recovered and logout funcitonality added price traker to tack my deal name

--- a/price_tracker/tracker/templates/tracker/emails/price_drop.html
+++ b/price_tracker/tracker/templates/tracker/emails/price_drop.html
@@ -82,8 +82,8 @@
             <a href="{{ product.product_url }}" class="action-button">View Product</a>
         </div>
         <div class="footer">
-            <p>This email was sent by Price Tracker. You received this because you set up a price alert for this product.</p>
-            <p>© {% now "Y" %} Price Tracker. All rights reserved.</p>
+            <p>This email was sent by TrackMyDeal. You received this because you set up a price alert for this product.</p>
+            <p>© {% now "Y" %} TrackMyDeal. All rights reserved.</p>
         </div>
     </div>
 </body>
