--- a/price_tracker/tracker/templates/tracker/home.html
+++ b/price_tracker/tracker/templates/tracker/home.html
@@ -7,7 +7,7 @@
     <div class="col-lg-6">
         <div class="card shadow mb-4">
             <div class="card-body">
-                <h1 class="card-title mb-4">Welcome to Price Tracker</h1>
+                <h1 class="card-title mb-4">Welcome to TrackMyDeal</h1>
                 <p class="lead">Never miss a deal again! Track prices from your favorite online stores and get notified when prices drop.</p>
                 
                 <div class="features-list mt-4">
