--- a/price_tracker/tracker/templates/tracker/dashboard.html
+++ b/price_tracker/tracker/templates/tracker/dashboard.html
@@ -75,7 +75,7 @@
                             </span>
                             {% elif product.price_difference < 0 %}
                             <span class="price-change-up">
-                                <i class="fas fa-arrow-up me-1"></i>${{ product.price_difference|abs|floatformat:2 }} ({{ product.price_difference_percentage|abs|floatformat:1 }}%)
+                                <i class="fas fa-arrow-up me-1"></i>${{ product.price_difference|floatformat:2 }} ({{ product.price_difference_percentage|floatformat:1 }}%)
                             </span>
                             {% else %}
                             <span class="text-muted">No change</span>
