--- a/price_tracker/tracker/templates/tracker/product_details.html
+++ b/price_tracker/tracker/templates/tracker/product_details.html
@@ -79,7 +79,7 @@
                             </span>
                             {% elif product.price_difference < 0 %}
                             <span class="price-change-up">
-                                <i class="fas fa-arrow-up me-1"></i>{{ product.price_difference_percentage|abs|floatformat:1 }}%
+                                <i class="fas fa-arrow-up me-1"></i>{{ product.price_difference_percentage|floatformat:1 }}%
                             </span>
                             {% else %}
                             <span class="text-muted">No change</span>
