--- a/price_tracker/tracker/templates/tracker/home.html
+++ b/price_tracker/tracker/templates/tracker/home.html
@@ -74,7 +74,7 @@
                     <div class="mb-3">
                         <label for="{{ form.target_price.id_for_label }}" class="form-label">Target Price</label>
                         <div class="input-group">
-                            <span class="input-group-text">$</span>
+                            <span class="input-group-text">₹</span>
                             {{ form.target_price }}
                         </div>
                         <div class="form-text text-muted">You'll be notified when the price drops below this amount</div>
